--- a/Templates/index.html
+++ b/Templates/index.html
@@ -24,6 +24,7 @@
                         <option value="ja">Japanese</option>
                         <option value="ru">Russian</option>
                         <option value="de">German</option>
+                        <option value="sw">Kiswahili</option>
                     </select>
                 </div>
                 <div>
